# mingw-w64-x86_64-static-piwebapi-ucdavis

./: .cproject  .project  CMakeLists.txt  README.md
include/: root_certificates.hpp
include/piwebapi-ucdavis/: amalgamated.h  mainwindow.h  treemodel.h
share/template_question/: readme.md
src/: amalgamated.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mingw-w64-x86_64-static-uc-davis-piwebapi.cpp  readme.md  treeitem.cpp
src/UI/: Interface.hpp  MainWindow.cpp  MainWindow.hpp  Plugins.cpp  Plugins.cpp.autosave  Plugins.hpp  Plugins.hpp.autosave  main.ui  universalInclude.hpp
src/core/: PluginManager.hpp  Settings.hpp  SettingsManager.cpp  SettingsManager.hpp  config.hpp
src/plugins/: readme.md
src/plugins/UCD_PWA_Browser/: CMakeLists.txt  Interface.hpp  MainWidget.cpp  MainWidget.hpp  Plugin.cpp  Plugin.hpp  TreeModel.hpp  amalgamated.cpp  config.h  config.hpp  readme.md  treeitem.cpp  treemodel.cpp  universalInclude.hpp
src/plugins/UCD_PWA_Browser/UI/: TreeModel.cpp  TreeModel.hpp  universalInclude.hpp
src/plugins/UCD_PWA_Browser/core/: HTTP_JSON.cpp  HTTP_JSON.cpp.autosave  HTTP_JSON.hpp  PiWebAPI.cpp  PiWebAPI.cpp.autosave  PiWebAPI.hpp  config.hpp
